--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+
+body{
+    /* font-family: 'Roboto', sans-serif;*/
+     /* font-family: 'Ms Madi', cursive; */
+     /* font-family: 'Ms Madi', cursive; */
+     font-family: 'EB Garamond', serif;
+
+  }
+
+
+
+
 /* Navbar Section */
 .navbar{
     border-bottom: #0092e6 solid 3px;
@@ -24,5 +36,23 @@
     background-size: 100% 100%;
     height: 100vh;
   
+  }
+
+  h1{
+    margin-top: 20px;
+  
+  }
+  
+  /* #header .overlay{
+    background-color: rgba(26, 0, 26, 0.092);
+    height: 100vh;
+  } */
+
+  .btn-outline-secondary{
+    cursor:pointer;
+  }
+  
+  .btn-outline-secondary:hover{
+    background-color: #990099;
   }
 
